chapters/13/snippets/prometheus-demo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-demo-app
  namespace: prometheus-demo-app
  labels:
    app: prometheus-demo
spec:
  type: ClusterIP
  selector:
    app: prometheus-demo
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
